# code-from-books

./: CMakeLists.txt
Computer Security: A Hands-on Approach - Wenliang Du/: 01_1_cap_leak.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/01_introduction/: arrays.c  character_arrays  character_arrays.c  character_counting_1.c  character_counting_2.c  data_types.md  escape_sequence_replace.c  fahrenheit_celsius.c  file_copying.c  functions.c  helloworld.c  line_counting_1.c  line_counting_2.c  longest_line.c  one_word_per_line.c  word_counting.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/01_introduction/exercises/: 1_09.c  1_10.c  1_12.c  1_13.c  1_14.c  1_15.c  1_17.c  1_18.c  1_19.c  1_20.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/02_types_operators_expressions/: arithmetic_operators.c  atoi.c  bitwise_operators.c  conditional_expressions.c  const.c  data_types.c  enums.c  escape_sequences.c  hexadecimal_and_octal.c  lowercase.c  squeeze.c  string_header.c  strlen.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/02_types_operators_expressions/exercises/: 2_1.c  2_10.c  2_2.c  2_3.c  2_9.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/03_control_flow/: binary_search.c  switch.c  while_for.c  while_for_do.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/03_control_flow/exercises/: 3_1.c  3_2.c
The C Programming Language - Brian Kernighan & Dennis Ritchie/03_control_flow/input/: 3_2.txt
The C Programming Language - Brian Kernighan & Dennis Ritchie/chapter_2/: bitwise_operators.c  notes.md  random.c  strcat.c
