cmake_minimum_required(VERSION 4.0)
project(code_from_books)

set(CMAKE_CXX_STANDARD 14)

include_directories("C++ Programming - Mike McGrath/file_structure_example")

add_executable(code_from_books
        "C++ Programming - Mike McGrath/file_structure_example/ops.cpp"
        "C++ Programming - Mike McGrath/file_structure_example/ops.h"
        "C++ Programming - Mike McGrath/file_structure_example/sum.cpp"
        "C++ Programming - Mike McGrath/arithmetic.cpp"
        "C++ Programming - Mike McGrath/casting.cpp"
        "C++ Programming - Mike McGrath/compilation.cpp"
        "C++ Programming - Mike McGrath/constants.cpp"
        "C++ Programming - Mike McGrath/data_types_keywords.cpp"
        "C++ Programming - Mike McGrath/error_handling.cpp"
        "C++ Programming - Mike McGrath/error_handling_except.cpp"
        "C++ Programming - Mike McGrath/error_handling_what.cpp"
        "C++ Programming - Mike McGrath/file_appending.cpp"
        "C++ Programming - Mike McGrath/file_formatting.cpp"
        "C++ Programming - Mike McGrath/file_reading.cpp"
        "C++ Programming - Mike McGrath/file_writing.cpp"
        "C++ Programming - Mike McGrath/function_args.cpp"
        "C++ Programming - Mike McGrath/function_overloading.cpp"
        "C++ Programming - Mike McGrath/functions_references.cpp"
        "C++ Programming - Mike McGrath/hello_world.cpp"
        "C++ Programming - Mike McGrath/if_statement.cpp"
        "C++ Programming - Mike McGrath/input_output.cpp"
        "C++ Programming - Mike McGrath/logical_operators.cpp"
        "C++ Programming - Mike McGrath/loops_for.cpp"
        "C++ Programming - Mike McGrath/loops_while.cpp"
        "C++ Programming - Mike McGrath/macro_alternatives.cpp"
        "C++ Programming - Mike McGrath/macro_assertions.cpp"
        "C++ Programming - Mike McGrath/macro_conditions.cpp"
        "C++ Programming - Mike McGrath/macro_functions.cpp"
        "C++ Programming - Mike McGrath/macro_stringizing.cpp"
        "C++ Programming - Mike McGrath/macros.cpp"
        "C++ Programming - Mike McGrath/oop_base_constructor.cpp"
        "C++ Programming - Mike McGrath/oop_constructors.cpp"
        "C++ Programming - Mike McGrath/oop_encapsulation.cpp"
        "C++ Programming - Mike McGrath/oop_inheritance.cpp"
        "C++ Programming - Mike McGrath/oop_multiple_objects.cpp"
        "C++ Programming - Mike McGrath/oop_overloading.cpp"
        "C++ Programming - Mike McGrath/oop_overriding.cpp"
        "C++ Programming - Mike McGrath/operator_precedence.cpp"
        "C++ Programming - Mike McGrath/pointers.cpp"
        "C++ Programming - Mike McGrath/pointers_addresses.cpp"
        "C++ Programming - Mike McGrath/pointers_arithmetic.cpp"
        "C++ Programming - Mike McGrath/pointers_arrays.cpp"
        "C++ Programming - Mike McGrath/pointers_functions.cpp"
        "C++ Programming - Mike McGrath/pointers_references.cpp"
        "C++ Programming - Mike McGrath/polymorphism_abstract_data.cpp"
        "C++ Programming - Mike McGrath/polymorphism_capability_class.cpp"
        "C++ Programming - Mike McGrath/polymorphism_class_ptr.cpp"
        "C++ Programming - Mike McGrath/polymorphism_derived_class.cpp"
        "C++ Programming - Mike McGrath/polymorphism_hierarchy.cpp"
        "C++ Programming - Mike McGrath/polymorphism_virtual_method.cpp"
        "C++ Programming - Mike McGrath/recursion.cpp"
        "C++ Programming - Mike McGrath/references.cpp"
        "C++ Programming - Mike McGrath/sizeof.cpp"
        "C++ Programming - Mike McGrath/string_compare.cpp"
        "C++ Programming - Mike McGrath/string_conversion.cpp"
        "C++ Programming - Mike McGrath/string_features.cpp"
        "C++ Programming - Mike McGrath/string_input.cpp"
        "C++ Programming - Mike McGrath/string_replace.cpp"
        "C++ Programming - Mike McGrath/string_substrings.cpp"
        "C++ Programming - Mike McGrath/string_swapping.cpp"
        "C++ Programming - Mike McGrath/strings.cpp"
        "C++ Programming - Mike McGrath/switch_statement.cpp"
        "C++ Programming - Mike McGrath/ternary_operator.cpp"
        "C++ Programming - Mike McGrath/value_assignment.cpp"
        "C++ Programming - Mike McGrath/value_comparison.cpp"
        "C++ Programming - Mike McGrath/variable_arrays.cpp"
        "C++ Programming - Mike McGrath/variable_scope.cpp"
        "C++ Programming - Mike McGrath/variables.cpp"
        "C++ Programming - Mike McGrath/vector_arrays.cpp"
        "C++ Programming - Mike McGrath/visual_programming.cpp"
        "C++ Programming - Mike McGrath/lotto/lotto.cpp"
        "The C Programming Language - Brian Kernighan & Dennis Ritchie/chapter_2/const.c")
